<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textForwaredToggleLabel"
        android:layout_above="@+id/textForwardToggle" />
    
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textForwardToggle" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_block_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_server_button"
            android:id="@+id/configureServerButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_connection_button"
            android:id="@+id/testConnectionButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pushInboxButton"
            android:text="@string/push_inbox_button" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serverAddressDisplayLabel"
        android:text="@string/server_address_display_label"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serverAddressDisplay" />
    
</LinearLayout>